--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/main.js",
-  "dependencies": {},
+  "dependencies": {
+    "@types/express": "^4.17.14",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
     "typescript": "^4.8.4"
   },
