--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "build/main.js",
-  "dependencies": {
-    "@types/express": "^4.17.14",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "typescript": "^4.8.4"
-  },
-  "scripts": {
-    "test": "echo \"Warning: no test specified\"",
-    "start": "node build/main.js",
-    "build": "npx tsc"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "build/main.js",
+    "dependencies": {
+        "@types/express": "^4.17.14",
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "typescript": "^4.8.4"
+    },
+    "scripts": {
+        "test": "echo \"Warning: no test specified\"",
+        "start": "node build/main.js",
+        "build": "npx tsc",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    },
+    "author": "",
+    "license": "ISC"
 }
