--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,27 @@
     "main": "build/main.js",
     "dependencies": {
         "@types/express": "^4.17.14",
-        "express": "^4.18.2"
+        "bcrypt": "^5.1.0",
+        "concurrently": "^7.6.0",
+        "cookie-parser": "^1.4.6",
+        "express": "^4.18.2",
+        "hashmap": "^2.4.0",
+        "jsonwebtoken": "^8.5.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/hashmap": "^2.3.1",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/uuid": "^8.3.4",
         "typescript": "^4.8.4"
     },
     "scripts": {
         "test": "echo \"Warning: no test specified\"",
         "start": "node build/main.js",
         "build": "npx tsc",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/main.js\""
     },
     "author": "",
     "license": "ISC"
