--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
     "description": "",
     "main": "build/main.js",
     "dependencies": {
-        "@types/express": "^4.17.14",
         "bcrypt": "^5.1.0",
         "concurrently": "^7.6.0",
         "cookie-parser": "^1.4.6",
@@ -16,16 +15,19 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
+        "@types/express": "^4.17.14",
         "@types/hashmap": "^2.3.1",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/uuid": "^8.3.4",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
     },
     "scripts": {
         "test": "echo \"Warning: no test specified\"",
         "start": "node build/main.js",
         "build": "npx tsc",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/main.js\""
+        "dev": "nodemon"
     },
     "author": "",
     "license": "ISC"
