--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
     "description": "",
     "main": "build/main.js",
     "dependencies": {
+        "@prisma/client": "^4.7.0",
         "bcrypt": "^5.1.0",
         "concurrently": "^7.6.0",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.2",
         "hashmap": "^2.4.0",
         "jsonwebtoken": "^8.5.1",
+        "pg": "^8.8.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
@@ -18,8 +20,10 @@
         "@types/express": "^4.17.14",
         "@types/hashmap": "^2.3.1",
         "@types/jsonwebtoken": "^8.5.9",
+        "@types/pg": "^8.6.5",
         "@types/uuid": "^8.3.4",
         "nodemon": "^2.0.20",
+        "prisma": "^4.7.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
     },
@@ -29,7 +33,6 @@
         "build": "npx tsc",
         "dev": "nodemon",
         "seed": "ts-node prisma/seed.ts"
-
     },
     "author": "",
     "license": "ISC"
