--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "bcrypt": "^5.1.0",
         "concurrently": "^7.6.0",
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "hashmap": "^2.4.0",
         "jsonwebtoken": "^8.5.1",
