--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@prisma/client": "^4.7.0",
         "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
         "concurrently": "^7.6.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.3",
@@ -17,6 +18,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/body-parser": "^1.19.2",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.14",
         "@types/hashmap": "^2.3.1",
