--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Book covers
+/src/assets/covers
+
 # compiled output
 /dist
 /tmp
