--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "main": "build/main.js",
     "dependencies": {
         "@prisma/client": "^4.7.0",
-        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
         "concurrently": "^7.6.0",
         "cookie-parser": "^1.4.6",
@@ -17,7 +17,7 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.2",
         "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.14",
