Removed some assets from angular build

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -39,6 +39,15 @@
           },
           "configurations": {
             "production": {
+              "assets": [
+                "src/favicon.ico",
+                {
+                  "input": "src/assets",
+                  "glob": "**/*",
+                  "ignore": ["covers/*", "tutorial/video.*"],
+                  "output": "/assets"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
